Restrict post image height to 180px on desktop view to avoid stretching

--- a/client/src/components/post-card/PostCard.styles.css
+++ b/client/src/components/post-card/PostCard.styles.css
@@ -12,6 +12,7 @@
   border-radius: 10px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
   min-height: 100%;
+  max-height: 180px;
 }
 
 #posts .post .post-description {
@@ -87,4 +88,10 @@
 
 .post-main:hover .card-overlay {
   opacity: 1;
+}
+
+@media (max-width: 770px) {
+  #posts .post img.post-image {
+    max-height: 100%;
+  }
 }
